@@ -1,7 +1,11 @@
 DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v6r1-3.9.patch1 2982 SHA256 ec99a25471dddd6c860762ab3895f94c07181e25f5d4785c66422fff8328cf40 SHA512 62f1830edb1b5b54c27289e81d309a516ac5bfd5ee7b6b75f77ea8b083b8776d928cf068fa87cd776fad550cff836e1260d2618bd678a37a88972a5d2c0274a2 WHIRLPOOL d303f8e51b456c6c657953f52d5107d6e1a09541210d1ad742aaf9d60494c6587329aecf7828b4417c2f3cf6bd62d51d843af959aa123f4a8a4886112a743ca1
+DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v6r2-3.10.patch1 2982 SHA256 cbe62e86c49dee2430b491295d83c5d08c2e068728f30a0fb714dbaccdd0f48c SHA512 9a34026a88ee26b2372eba0eab1b65f85c0939937c23ee9101466ec433e803433ba888a54e1813e57d650ceba6a6c8d19cd23435ee4e98aa81764965d92b0a52 WHIRLPOOL 68e2fd19c5c8e582538cef6eadefc38f368a2e392339e5dd1110c498059c881f259bbd8e3b149f4ea7490cddcffd5b2a3c6a08013cbd96a427f751dd44e23870
 DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v6r2-3.9.patch1 2982 SHA256 bdd85bb596861a9aea25620cfcc7116baed9cdd00549c7200e540cd2ad0589c4 SHA512 6d45134ca7d204281cff62cca95aedcbf5ba4dc898b653f8fdc6636376bf6e41b60c71ea253f2a0f709ab195c855cabbf68d23e45d6767001e9cecf42a6baaf3 WHIRLPOOL 2427e510759b4d22fc9818d774cb1d90200811b8ed493005be9b3a6dc19e5433f9a5822a1c12e53bde4b2c67f0bc5478ca3f9c3227ca05f28190587f51593f3b
 DIST 0002-block-introduce-the-BFQ-v6r1-I-O-sched-for-3.9.patch1 169564 SHA256 53a4db3514254fb4ef7c6232e1b6aa2c82818df89660fe16f772b472bff332f1 SHA512 b566f1d5f6b0da64a0a0a02b2fa58d643216636b5046eaac535af5c66213ff5ec895b7c19e1f7e98406d46dfcc2142d43fb695b116248fb0ea938e923732ccc8 WHIRLPOOL f12a09fcb2ea55d6a13c0a4d8de7423024c46b9f79e46dbfddc2a30a73bf00e74b7c91de5c7dd7aaa72a413cd986588bd5ccf96b27f7966107ba959c265119e5
+DIST 0002-block-introduce-the-BFQ-v6r2-I-O-sched-for-3.10.patch1 173976 SHA256 4b5a2136f5a84e541f4de1961a5eee0943f0489b7619746d24ac64a118ca4840 SHA512 360efb5033f2bb14f1fc60217c03511042f0509e05525ac7ea6d471c26012e63969ad6da1b2e0e0a0ad4b800519e3abf4408556049d592ee24ad3a3931b62716 WHIRLPOOL 55ae056b471049a7fa693dffb6427458820c7ce7895857db4455d81245d4fcad1374b7b4a42254d4edd00698a24a0241a8e11b9a05fc91e4fe039c69905f6202
 DIST 0002-block-introduce-the-BFQ-v6r2-I-O-sched-for-3.9.patch1 173244 SHA256 50943cfad96804fdcd7522eeb280938c41d1885b536ba780b9cc6e56854f49c5 SHA512 97c3b30f3fa42cc2fa004896bd555a7f959da5ec312e0d15b71a0513ffd10b3899fbcf6b52787f0a86d8091a93c7d04c2a8a08ff1952aa3720471b2cf2d75199 WHIRLPOOL 328a691274f17b2e28d989e7dcda3db5b29a5dd22d219a6e89aae6ae5eb9e4ebe348e9c6f3b9b230ca91b8d4db7c6d3324954776a2adc2cee2efeaccfaac0225
+DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v6r2-for-3.10.0.patch1 35687 SHA256 bce5d8d04ae8384268cad836a70a103bf3c2464acb3c55aa773fb852e2f49036 SHA512 5849f22bcbe5aad0e5df1ffc711b677cca518bf4faeec32d5373ba05806ec79554a382df56859dd380bb1f38baee4e71acfe7c8d524b3b982ec6eec45bbb4f02 WHIRLPOOL e32f8563f486cee2b16d4117c326c04eb0f8518f66d80db512719603d775fe6d19125aaa13290fa511ce39a8ba19a9c2f6c28de9bd46ae17140e8e26b22d63f2
+DIST README-3.10.0.BFQ 10454 SHA256 76b613f067b4e784333ab5e1b0999aa40aeaad37230ea6e640d48073cbea3457 SHA512 fcd085ab4c356a25e738625ed19d50a375a30c8c4bd8bac4c5d58231957d3b9b66cb5e143be039a216ec223c0f3f2f1f3edf049e6a48aaf6c85bf97958792bf8 WHIRLPOOL fda44f2e0ac6b029028349935d7a8ceb14948df1d0cc05fcf47f9c382c5289899516c3b516caf7e452ad54c67a1bbe0c9d733391bdee4800e54c59b67cde9584
 DIST README-3.9.5.BFQ 9583 SHA256 88e76c5a8259b63c4534b9e154309cff2318f80506cbf469c7c8dff97474d4d5 SHA512 29e4f505eff76e2318fbecf0a7dc3f539103e2c1220e1445be1b7aa3872ea9fe3fbdb95a5cffb728ddc45bea5239a88c81d4d116b122dc795b59443c83549ca0 WHIRLPOOL 178000ac40952b903839a23d92e443be7c11ae262d674ea6f827d6eb49e28868f63bbf1eae1eb42e5eaec869504f5fc6d9c23937ac9b33e868059267b328edc5
 DIST README-3.9.6.BFQ 9583 SHA256 88e76c5a8259b63c4534b9e154309cff2318f80506cbf469c7c8dff97474d4d5 SHA512 29e4f505eff76e2318fbecf0a7dc3f539103e2c1220e1445be1b7aa3872ea9fe3fbdb95a5cffb728ddc45bea5239a88c81d4d116b122dc795b59443c83549ca0 WHIRLPOOL 178000ac40952b903839a23d92e443be7c11ae262d674ea6f827d6eb49e28868f63bbf1eae1eb42e5eaec869504f5fc6d9c23937ac9b33e868059267b328edc5
 DIST aufs-sources-3.10_p20130630.tar.xz 146092 SHA256 42be2295033458670909948e774c765ed45544b7bcbeb07d5e1472f696f3fb00 SHA512 8ac396f606a3117cc240595c0defba60203b370ce3429f0c10615c083625d455cb2128fa3f347732e69b8dad2c3284ffa5f27a4f6b7ef0e92ac011685f169fd0 WHIRLPOOL 7da2b81c203cbfbebe416812b265ddd3d6c7c5d7d232cf92ccb156ed19f1f2f2a29872653c3e4a23b7b004f798c525e2df5660f085822753c437656205cfc788
@@ -10,8 +14,8 @@ DIST deblob-3.10 117299 SHA256 d48cad04fab6a802b3a3e34955c8e35b539c2441f9a62522e
 DIST deblob-3.9 116031 SHA256 0fb17070d5aaf226fca39f70df68b7d482e4f803e0ef974626440a28c26b5dc3 SHA512 e014add3728dc3fa0b938f3849ccba60e82354a811eefe6761036aa5e5b7bda39960758bb918506ed3cd0758360729144304227ab2cc3f5489813204f0053d3d WHIRLPOOL 4e65c3a6ba5dd5d850567fcd347167245b527b098ffa390bf0e9fb9778ddb06cd48553f697e2fe7cb793714b520dbb5b90b9948a339663a315e299272aca09ef
 DIST deblob-check-3.10 565672 SHA256 748df2cf5c1f012f9942948827e57b12bb05c569cae220416b3c0339520d9855 SHA512 341ea8a755c4f1f42ddbc4e7dfe8d786e8b29f497bee3fd72154c8c1c0bcadcb9efff04f2663090bd8741e5b5baafed26a62b9d16c31f3b31665cd3cd3e779d5 WHIRLPOOL 7e6c8eefa9b44e7d50011a9390baf7999533b4016122992c0ac0722cce05dbb8e4b7e96f1f05e9bfdd2ce3e4c08f0e06c8955b68ed8c044ff75f3a314a405824
 DIST deblob-check-3.9 557345 SHA256 60d05db20e7b50919ca44487d05e8faa9cca830318bd8d96625f0f75b252eeed SHA512 6b857380d495261c4d356639157f99f3ca3412388fd3b1c72b566c3bb6453c5a22ab7716e3b24e64a9b63dab912b07baccccfd0fca806ac0e0620efeef777b6a WHIRLPOOL 877c2c9b813466f9aa5cfecdc9ab93247bd2cdead457c9e0bd97da49d042d0a52262f9b4f8e9c83e397b57c5bb5a8fe2b61bb5f44d5a178a579cc9fff990941a
-DIST genpatches-3.10-3.base.tar.xz 52604 SHA256 56b05e27e86960023523c06e9c8f9fbd52285d2ef52cef6028bfbf10802ae094 SHA512 7bff65187302839e1407f72dc5d61652e362fb824126db9653a2a2db98d512e96b9675d99a400caaf500458d8a7b2b8050345ddfdf574653d3c1315fbf066c80 WHIRLPOOL 6c9ff586694fc60206e2f84ac97017c954dce45688528482bf329b2f3d6eeb953c6cc27bfad619ea94270201a2d80b1eea9ad729220b651ddc6b4468819bfa97
-DIST genpatches-3.10-3.extras.tar.xz 16564 SHA256 2b6f06a71c89c5866615b1a32324f48e26f7e89b2e7473342a1f3451f1e39500 SHA512 1ef0aad40335438cc10163ffd2e7b7730274fff9bc9ce265be6e194fddf8edf7f527d1cbe3c411d6ba79f4fb63f2ee8d54af37fcdf9eb19f5717b6d54ecfce16 WHIRLPOOL 3bb7054fdfcc887fd306a60deda667acdba0b64e0b5c719f807b50b05c67451fae20e6e22fbde59fbd2fff2ab32b21cb91fa58ae05b7a37e9c8b23c28d5cc66a
+DIST genpatches-3.10-1.base.tar.xz 7312 SHA256 df4b6058c8b30d3bfdcdba178c98286dcc1b2406ea3a4b2772da78b4a688788a SHA512 fa19e9c1033e9d4a04b9df0775566682c431017427914d3312d56b0e94527424368b71b40d38dccd546f6ac235a37e28767d117623096da3702380627342e24e WHIRLPOOL 2bb4324c44d76b283a62284b52d07def889b90c2c09137be634298034f6dd270ffb1bbb2eed1fa3e0f3f0cba2339a0e3e057dc021cb3d2f56e15390d4ee7d5f2
+DIST genpatches-3.10-1.extras.tar.xz 16564 SHA256 8caa0851d5f72b41e52281fc8e741694185820b8b5bc10825cf49f6139a9c347 SHA512 e76214ddf262ae9b81724299ed3e9daeef09413d90112b909e2d3d6c4631bfa869e6dad71d9adb7c7f46de73c12b7ef2464996fdf8bae857d93e31354bd4cf1f WHIRLPOOL d7c7c22ec1dd522c00d2f8c37a6ce32d5b76b18886ed5c9fe5b2e35d9dce64bc61f558d338e9968f0081b468b5138040865ac20eda873ad7e133874cc8bd6880
 DIST genpatches-3.9-10.base.tar.xz 175032 SHA256 70fdd2a3019b01be0aea5b09aa3ca03a2af0ea0240da1a5345e4ba047ea8314c SHA512 af831b5c6ca860292be6d10ddd394dbaa7edb4193c6f1f4f2813a8605a6e71d31cfa2398116cc38e049448d372d95851717b1d58fb7634e4161601b768b03dcd WHIRLPOOL f55f3d3fa25d15764d549293abeb2606f94c3f8bcaae5bc5f8cb7df15609e0db54dfc1a658bc80f5212d70bd1000f4fde75e73877b533415a7c5c7553e668ea6
 DIST genpatches-3.9-10.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
 DIST genpatches-3.9-12.base.tar.xz 235956 SHA256 ab9ec774a9221c327ecc106cbf3a52e163166cd4a8ed55b77c49a339373b2f80 SHA512 309dd9861e0de034cf485c2d16f12ff040b44974f6ba1d1b804bb249617b797fcfacbc0eeca85af65cffc89f00f5c741270a2668fdad2686916a139d20b31f43 WHIRLPOOL b18390e8c8a68f865e7ae924077284396ad8dcf03a938d9116ab57d38993952d2b3aeb253d34c979cdf4cd4a3d98bd80cc4e9c3b653c95cf5bb8229a062fe77d
